<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.carautomation.carautomation11.SobreActivity"
    tools:showIn="@layout/activity_sobre">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffea00"
        android:id="@+id/cabecalho"
        android:orientation="horizontal"
        android:padding="10dip"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:textStyle="italic"
            android:textSize="18dp"
            android:id="@+id/texto1"
            android:text="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:background="#ffea00"
        android:layout_height="wrap_content"
        android:id="@+id/rodape"
        android:padding="10dip">
        <TextView
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:id="@+id/texto2"
            android:text="@string/empresa" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cabecalho"
        android:background="#a7ff7b00"
        android:layout_marginTop="50dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="190dp"
            android:layout_height="150dp"
            android:src="@drawable/icon"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/app"
            android:id="@+id/textView9"
            android:layout_alignTop="@+id/imageView1"
            android:layout_toRightOf="@+id/imageView1"
            android:layout_toEndOf="@+id/imageView1"
            android:textColor="#000"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textAlignment="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/versao"
            android:id="@+id/textView11"
            android:layout_below="@+id/imageView1"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/desenvolvido"
            android:id="@+id/textView12"
            android:textSize="18dp"
            android:layout_below="@+id/textView11"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/email"
            android:id="@+id/textView13"
            android:textSize="15dp"
            android:layout_below="@+id/textView12"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/agradecimento"
            android:textAlignment="center"
            android:id="@+id/textView14"
            android:textSize="15dp"
            android:layout_below="@+id/textView13"
            android:textColor="#FFF"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>
