<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/background"
    tools:context="com.carautomation.carautomation11.IndexActivity"
    tools:showIn="@layout/activity_index">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffea00"
        android:id="@+id/cabecalho"
        android:orientation="horizontal"
        android:padding="10dip"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:textStyle="italic"
            android:textSize="18dp"
            android:id="@+id/texto1"
            android:text="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:background="#ffea00"
        android:layout_height="wrap_content"
        android:id="@+id/rodape"
        android:padding="10dip">
        <TextView
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:id="@+id/texto2"
            android:text="@string/empresa" />
    </LinearLayout>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/acessar"
        android:id="@+id/btnAcesso"
        android:background="#fbed56"
        android:layout_below="@+id/cabecalho"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/sobre"
        android:background="#fbed56"
        android:id="@+id/btnSobre"
        android:layout_below="@+id/btnAcesso"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

</RelativeLayout>
