<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.carautomation.carautomation11.AccessActivity"
    android:background="@drawable/background"
    tools:showIn="@layout/activity_access">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffea00"
        android:id="@+id/cabecalho"
        android:orientation="horizontal"
        android:padding="10dip"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:textStyle="italic"
            android:textSize="18dp"
            android:id="@+id/texto1"
            android:text="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:background="#ffea00"
        android:layout_height="wrap_content"
        android:id="@+id/rodape"
        android:padding="10dip">
        <TextView
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:id="@+id/texto2"
            android:text="@string/empresa" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/login"
        android:id="@+id/textView"
        android:layout_below="@+id/cabecalho"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="80dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtLogin"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:layout_marginLeft="15dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/senha"
        android:id="@+id/textView2"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/txtLogin"
        android:layout_alignParentLeft="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/txtSenha"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/acessar"
        android:id="@+id/btnAcessar"
        android:layout_below="@+id/txtSenha"
        android:layout_marginLeft="110dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="50dp"
        android:background="#fbed56" />

</RelativeLayout>
