<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.carautomation.carautomation11.ParaBrisaActivity"
    tools:showIn="@layout/activity_para_brisa">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffea00"
        android:id="@+id/cabecalho"
        android:orientation="horizontal"
        android:padding="10dip"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <TextView
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:textStyle="italic"
            android:textSize="18dp"
            android:id="@+id/texto1"
            android:text="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical"
        android:background="#ffea00"
        android:layout_height="wrap_content"
        android:id="@+id/rodape"
        android:padding="10dip">
        <TextView
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center_horizontal"
            android:id="@+id/texto2"
            android:text="@string/empresa" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cabecalho"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/relativeLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/ligar_limpador_medio"
            android:id="@+id/btnLimpadorMedio"
            android:background="#fbed56" />

    </RelativeLayout>

</RelativeLayout>
